# Heyobo_Coffee

./: README.md  pyproject.toml  requirements.txt
.venv312/: pyvenv.cfg
src/coffee_game/: __init__.py  game.py  gaze_detector.py  hand_control.py  heyobo.py  main.py
src/coffee_game/ai_agent/: README.md  audio_recorder.py  init.py  llm.py  person_analyzer.py  speech_to_text.py  text_to_speech.py
