[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-coffee-game"
version = "0.1.0"
description = "A Python coffee catching game"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["pygame>=2.0"]

[project.scripts]
coffee-game = "coffee_game.main:main"

[tool.setuptools.packages.find]
where = ["src"]
